added sorting button and optimized bubble sort

--- a/projects/sorting/src/app/app.component.html
+++ b/projects/sorting/src/app/app.component.html
@@ -1,1 +1,4 @@
 <app-bar-graph [List]="Values"></app-bar-graph>
+<div>
+    <button (click)="btnDisabled = true; sortInIncreasingOrder(Values)" [disabled]="btnDisabled">Start Sorting</button>
+</div>
