--- a/projects/sorting/src/styles.scss
+++ b/projects/sorting/src/styles.scss
@@ -5,4 +5,100 @@ html {
 body {
     min-height: 100%;
     margin: 0;
+    background: #b0ffca;
+}
+.graph-container {
+    height: calc(100vh - 50px);
+}
+.d-flex {
+    display: flex;
+}
+.justify-content-center {
+    justify-content: center;
+}
+.justify-content-space-evenly {
+    justify-content: space-evenly;
+}
+.justify-content-flex-start {
+    justify-content: flex-start;
+}
+.ml-10 {
+    margin-left: 10px;
+}
+.p-5 {
+    padding: 5px;
+}
+.header {
+    text-transform: uppercase;
+    text-align: center;
+    margin: 0;
+    padding: 20px 0 15px 0;
+}
+.btn {
+    width: 200px;
+    text-align: center;
+    background-color: rebeccapurple;
+    outline: none;
+    border: none;
+    padding: 10px 0;
+    font-size: 12px;
+    font-weight: bold;
+    color: white;
+    border-radius: 10px;
+    cursor: pointer;
+    &:hover {
+        transform: translateY(-1px);
+        box-shadow: 0 4px 17px rgba(0, 0, 0, 0.20);
+    }
+    &:disabled {
+        cursor: not-allowed;
+        transform: none;
+        box-shadow: none;
+        background-color: grey;
+    }
+}
+.back-button {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    text-decoration: none;
+    padding: 10px 20px;
+    background-color: rebeccapurple;
+    color: white;
+    font-weight: bold;
+    font-size: 12px;
+    border-radius: 10px;
+    &:hover {
+        transform: translateY(-1px);
+        box-shadow: 0 4px 17px rgba(0, 0, 0, 0.20);
+    }
+}
+.flex-wrap {
+    flex-wrap: wrap;
+}
+.card {
+    display: flex;
+    flex: 1 1 300px;
+    align-items: center;
+    justify-content: center;
+    height: 200px;
+    background-color: rebeccapurple;
+    border-radius: 30px;
+    margin: 5px;
+    transition: box-shadow 0.3s;
+    .link {
+        text-decoration: none;
+        font-size: 40px;
+        font-weight: bold;
+        user-select: none;
+        color: white;
+        transition: font-size 0.3s;
+        &:hover {
+            font-size: 44px;
+        }
+    }
+    &:hover {
+        // transform: translateY(-1px);
+        box-shadow: 0 4px 17px rgba(0, 0, 0, 0.80);
+    }
 }
