added selection sort and insertion sort

--- a/projects/sorting/src/app/dashboard/dashboard.component.html
+++ b/projects/sorting/src/app/dashboard/dashboard.component.html
@@ -3,4 +3,10 @@
     <div class="card">
         <a class="link" routerLink="/bubble-sort">Bubble Sort</a>
     </div>
+    <div class="card">
+        <a class="link" routerLink="/selection-sort">Selection Sort</a>
+    </div>
+    <div class="card">
+        <a class="link" routerLink="/insertion-sort">Insertion Sort</a>
+    </div>
 </div>
