--- a/projects/sorting/src/app/selection-sort/selection-sort.component.html
+++ b/projects/sorting/src/app/selection-sort/selection-sort.component.html
@@ -3,6 +3,6 @@
     <app-bar-graph *ngIf="Values.length > 0" [List]="Values"></app-bar-graph>
 </div>
 <div class="d-flex justify-content-center">
-    <button class="btn" (click)="btnDisabled = true; bubbleSort(Values)" [disabled]="btnDisabled">Start Sorting</button>
+    <button class="btn" (click)="btnDisabled = true; selectionSort(Values)" [disabled]="btnDisabled">Start Sorting</button>
     <button class="btn ml-10" (click)="initializeValue()">Generate Random Data</button>
 </div>
