added quick sort

--- a/projects/sorting/src/app/dashboard/dashboard.component.html
+++ b/projects/sorting/src/app/dashboard/dashboard.component.html
@@ -9,4 +9,7 @@
     <div class="card">
         <a class="link" routerLink="/insertion-sort">Insertion Sort</a>
     </div>
+    <div class="card">
+        <a class="link" routerLink="/quick-sort">Quick Sort</a>
+    </div>
 </div>
