--- a/projects/sorting/src/app/dashboard/dashboard.component.html
+++ b/projects/sorting/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,7 @@
 <h1 class="header">Algorithm Visualizer</h1>
+<div class="d-flex justify-content-center">
+    <img src="../../assets/algo-pic.png" alt="Algorithm image" style="margin-top: -50px;">
+</div>
 <div class="d-flex flex-wrap p-5">
     <div class="card">
         <a class="link" routerLink="/bubble-sort">Bubble Sort</a>
